--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
   @layer base {
     :root {
@@ -72,5 +72,20 @@
     }
     body {
       @apply bg-background text-foreground;
+    }
+
+    /* HTML: <div class="loader"></div> */
+    .loader {
+      width: 30px;
+      aspect-ratio: 1;
+      border-radius: 50%;
+      background: 
+        radial-gradient(farthest-side,#ffa516 94%,#0000) top/8px 8px no-repeat,
+        conic-gradient(#0000 30%,#ffa516);
+      -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+      animation: l13 1s infinite linear;
+    }
+    @keyframes l13{ 
+      100%{transform: rotate(1turn)}
     }
   }
